--- a/.config/matugen/templates/hyprland/colors.conf
+++ b/.config/matugen/templates/hyprland/colors.conf
@@ -1,5 +1,5 @@
 general {
-    col.active_border = rgba({{colors.outline.default.hex_stripped}}FF)
+    col.active_border = rgba({{colors.primary.default.hex_stripped}}FF)
     col.inactive_border = rgba({{colors.outline_variant.default.hex_stripped}}AA)
 }
 
